tests/neg/t750/AO_2.java
public class AO_2 {
    public static <T> void f(T[] ar0) {
        System.out.println(ar0);
    }
}
